[gd_scene load_steps=12 format=3 uid="uid://clmg3l3n28x38"]

[ext_resource type="Script" path="res://Entity/Player/Player.gd" id="1_4qbo7"]
[ext_resource type="Script" path="res://Entity/Components/StatComponent.gd" id="2_cf8lx"]
[ext_resource type="Script" path="res://Entity/Components/StatusComponent.gd" id="3_l5gfj"]
[ext_resource type="Script" path="res://Entity/Components/HealthComponent.gd" id="4_8ip81"]
[ext_resource type="Texture2D" uid="uid://cq1ii3ed6oels" path="res://Entity/Player/fauna.png" id="5_ygjep"]
[ext_resource type="Script" path="res://Input/ClickHandler.gd" id="6_kgqto"]
[ext_resource type="Script" path="res://UI/HealthLabel.gd" id="7_1hqya"]
[ext_resource type="Script" path="res://Entity/Components/PartyComponent.gd" id="8_mmgs7"]
[ext_resource type="Script" path="res://Entity/Components/EnergyComponent.gd" id="9_5kwft"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8bva"]
size = Vector2(104, 93)

[sub_resource type="LabelSettings" id="LabelSettings_urr12"]
font_size = 26

[node name="Player" type="Node2D"]
script = ExtResource("1_4qbo7")

[node name="StatComponent" type="Node" parent="."]
script = ExtResource("2_cf8lx")

[node name="StatusComponent" type="Node" parent="."]
script = ExtResource("3_l5gfj")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_8ip81")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(6, 6)
texture = ExtResource("5_ygjep")

[node name="ClickHandler" type="Node" parent="."]
script = ExtResource("6_kgqto")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5, 2.5)
shape = SubResource("RectangleShape2D_b8bva")

[node name="HealthLabel" type="Label" parent="." node_paths=PackedStringArray("health_component")]
offset_left = -48.0
offset_top = -84.0
offset_right = 52.0
offset_bottom = -45.0
text = "100/100"
label_settings = SubResource("LabelSettings_urr12")
script = ExtResource("7_1hqya")
health_component = NodePath("../HealthComponent")

[node name="PartyComponent" type="Node" parent="."]
script = ExtResource("8_mmgs7")
team = 1

[node name="EnergyComponent" type="Node" parent="."]
script = ExtResource("9_5kwft")

[connection signal="input_event" from="Area2D" to="ClickHandler" method="_on_input_event"]
[connection signal="mouse_entered" from="Area2D" to="ClickHandler" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="ClickHandler" method="_on_mouse_exited"]
