[gd_scene load_steps=3 format=3 uid="uid://bmklwr3ycyicn"]

[ext_resource type="Script" path="res://Shop/shop_item_relic.gd" id="1_nhbl5"]
[ext_resource type="Script" path="res://Input/ClickHandler.gd" id="3_lb38f"]

[node name="ShopItemRelic" type="Control" node_paths=PackedStringArray("relicImage", "clickHandler", "priceLabel")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nhbl5")
relicImage = NodePath("TextureRect")
clickHandler = NodePath("ClickHandler")
cost = 20
priceLabel = NodePath("PriceLabel/Label")

[node name="PriceLabel" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 55.0
offset_right = 74.0
offset_bottom = 95.0

[node name="Label" type="Label" parent="PriceLabel"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 152.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "dfdsfds
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureButton" parent="."]
layout_mode = 0
offset_left = -45.0
offset_top = -42.0
offset_right = -5.0
offset_bottom = -2.0
scale = Vector2(2.32, 2.32)

[node name="ClickHandler" type="Node" parent="."]
script = ExtResource("3_lb38f")
time_to_lock_hover = 0.3

[connection signal="gui_input" from="TextureRect" to="ClickHandler" method="_on_gui_input_event"]
[connection signal="mouse_entered" from="TextureRect" to="ClickHandler" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="ClickHandler" method="_on_mouse_exited"]
